<resources>
    <string name="app_name">Biblioteca App</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="rememberme">Recordar credenciales</string>
    <string name="newAccount">¿No tiene cuenta?</string>
    <string name="newAccount1"><u>Registrese aquí</u></string>
    <string name="passwordConfirm">Confirmar Contraseña</string>
    <string name="register">Crea tu cuenta</string>
    <string name="names">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="id">Cédula de Identidad</string>
    <string name="id_reg">Cédula de Identidad (sin guiones)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--STRING ELEMENTOS DEL BOTTOM BAR-->
    <string name="tab_bookList">Libros</string>
    <string name="tab_category">Categorias</string>
    <string name="tab_rentalClient">Rentas Pendientes</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="passwordChange">Cambiar contraseña</string>
    <string name="Oldpassword">Contraseña vieja</string>
    <string name="Newpassword">Nueva Contraseña</string>
    <string name="listbook">Lista de Libros</string>
</resources>
